--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <meta property="og:description" content="Your dealership portal" />
     <meta property="og:type" content="website" />
     <!-- add preview image here -->
-    <meta property="og:image" content="https://res.cloudinary.com/dnkg5jkip/image/upload/v1743079522/Screenshot_2025-03-27_at_6.15.13_PM_dq26wk.png" />
+    <meta property="og:image" content="https://asset.cloudinary.com/dnkg5jkip/94bf4c80ef8b1c29f361ba2c0211789b" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@neos-labs" />a
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="https://asset.cloudinary.com/dnkg5jkip/94bf4c80ef8b1c29f361ba2c0211789b" />
   </head>
 
   <body>
