--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Your dealership portal"/>
     <meta name="author" content="Neos Labs" />
 
-    <meta property="og:title" content="Preowned Hub" />
+    <meta property="og:title" content="Preowned-Hub" />
     <meta property="og:description" content="Your dealership portal" />
     <meta property="og:type" content="website" />
     <!-- add preview image here -->
