--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:image" content="https://asset.cloudinary.com/dnkg5jkip/94bf4c80ef8b1c29f361ba2c0211789b" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@neos-labs" />a
+    <meta name="twitter:site" content="@neos-labs" />
     <meta name="twitter:image" content="https://asset.cloudinary.com/dnkg5jkip/94bf4c80ef8b1c29f361ba2c0211789b" />
   </head>
 
